--- a/vs/MultiPlatformDev/MultiPlatformDevLinux.vcxproj
+++ b/vs/MultiPlatformDev/MultiPlatformDevLinux.vcxproj
@@ -34,8 +34,17 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(ProjectDir)bin\linux_$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\linux_$(Platform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(ProjectDir)bin\linux_$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\linux_$(Platform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\base\base.h" />
+    <ClInclude Include="..\..\src\base\platform\linux.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -43,11 +52,12 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
+      <PreprocessorDefinitions>USE_LINUX;</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <VerboseOutput>false</VerboseOutput>
       <AdditionalLibraryDirectories>../BaseLinux/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LibraryDependencies>BaseLinux;</LibraryDependencies>
+      <LibraryDependencies>BaseLinux;xcb;</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -56,10 +66,11 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
+      <PreprocessorDefinitions>USE_LINUX;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>../BaseLinux/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LibraryDependencies>BaseLinux;</LibraryDependencies>
+      <LibraryDependencies>BaseLinux;xcb;</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
