--- a/vs/Base/BaseWin.vcxproj.filters
+++ b/vs/Base/BaseWin.vcxproj.filters
@@ -5,18 +5,21 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="src\platform">
+    <Filter Include="src\base">
+      <UniqueIdentifier>{80f05331-43b5-4f99-a7e3-d2cc0b6ab64f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\base\platform">
       <UniqueIdentifier>{52073a68-57ea-4848-818e-ba4c8e7a948f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\base\platform\win.cpp">
-      <Filter>src\platform</Filter>
+      <Filter>src\base\platform</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\base\platform\win.h">
-      <Filter>src\platform</Filter>
+      <Filter>src\base\platform</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
